tests/NormalTests/paczka1/small_fuzzy/59878605.err
Error in line 2: E8hvUlUORg A447 79,4
Error in line 1: Tyy S661 14,9
Error in line 11: A868 S661 65,70
Error in line 9: j0inIflaNw9 S661 51,5
